--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "boring/templates/index.html" %}
 
-{% block pages %}
+{% block homepage_content_extend %}
 <div class="mt-4 text-4xl xl:text-xl">
     <div class="group">
         <a class="font-sans text-gray-600 hover:text-gray-400
@@ -9,7 +9,7 @@
             Who am I?
             <i class="las la-arrow-right"></i>
         </a>
-        <p class="inline text-white bg-green-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
+        <p class="inline text-white bg-blue-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
             About
         </p>
     </div>
@@ -58,5 +58,18 @@
         </p>
     </div>
 </div>
-{% endblock pages%}
-
+{% block social %}
+    {% if config.extra.social %}            
+        <div class="mt-4 text-8xl xl:text-4xl flex gap-2 justify-center
+                    xl:justify-start">
+            {% for i in config.extra.social %}
+                <div class="text-gray-500 hover:text-gray-700 transition">
+                <a href="{{ i.url }}" target="_blank">
+                    <i class="{{ i.icon }}"></i>
+                </a>
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endblock social %}
+{% endblock homepage_content_extend %}
