--- a/templates/index.html
+++ b/templates/index.html
@@ -1,75 +1,98 @@
 {% extends "boring/templates/index.html" %}
 
-{% block homepage_content_extend %}
-<div class="mt-4 text-4xl xl:text-xl">
-    <div class="group">
-        <a class="font-sans text-gray-600 hover:text-gray-400
-            dark:text-slate-500 dark:hover:text-slate-400 transition"
-            href="/about">
-            Who am I?
-            <i class="las la-arrow-right"></i>
-        </a>
-        <p class="inline text-white bg-blue-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
-            About
-        </p>
-    </div>
-    <div class="group">
-        <a class="font-sans text-gray-600 hover:text-gray-400
-            dark:text-slate-500 dark:hover:text-slate-400 transition"
-            href="/blog">
-            What do I think? 
-            <i class="las la-arrow-right"></i>
-        </a>
-        <p class="inline text-white bg-green-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
-            Blog
-        </p>
-    </div>
-    <div class="group">
-        <a class="font-sans text-gray-600 hover:text-gray-400
-            dark:text-slate-500 dark:hover:text-slate-400 transition"
-            href="/blog">
-            What do I work on? 
-            <i class="las la-arrow-right"></i>
-        </a>
-        <p class="inline text-white bg-green-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
-            Projects
-        </p>
-    </div>
-    <div class="group">
-        <a class="font-sans text-gray-600 hover:text-gray-400
-            dark:text-slate-500 dark:hover:text-slate-400 transition"
-            href="/blog">
-            What have I done?
-            <i class="las la-arrow-right"></i>
-        </a>
-        <p class="inline text-white bg-green-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
-            Resume
-        </p>
-    </div>
-    <div class="group">
-        <a class="font-sans text-gray-600 hover:text-gray-400
-            dark:text-slate-500 dark:hover:text-slate-400 transition"
-            href="/blog">
-            What have I written?
-            <i class="las la-arrow-right"></i>
-        </a>
-        <p class="inline text-white bg-green-900 opacity-0 ease-in-out duration-150 group-hover:opacity-100">
-            Writings
-        </p>
+
+{% block content %}
+<div class="h-screen xl:h-auto xl:w-screen flex flex-col xl:flex-row gap-8 xl:gap-0
+            items-center xl:items-start text-center xl:text-left justify-center
+            xl:justify-start">
+    {% if config.extra.homepage_img_url %}
+        <img
+            src="{{ config.extra.homepage_img_url }}"
+            class="object-cover h-64 w-64 xl:h-screen xl:w-1/2 rounded-full
+            xl:rounded-none"/>
+    {% endif %}
+    <div class="xl:h-screen xl:w-1/2 flex items-center">
+        <div class="mx-8 flex flex-col gap-12 xl:gap-0">
+            <h1 class="font-serif text-8xl xl:text-4xl text-black dark:text-slate-300">
+                hello, i'm  <span class="bg-forest text-white">nikhil</span> .
+            </h1>
+            <p class="font-sans text-4xl xl:text-xl text-gray-600 dark:text-slate-500">
+                {{ config.extra.homepage_subtitle }}
+                    </p>
+        {% block homepage_content_extend %}
+        <div class="mt-4 text-4xl xl:text-xl">
+            <div class="group">
+                <a class="font-sans text-gray-600 hover:text-gray-400
+                    dark:text-slate-500 dark:hover:text-slate-400 transition"
+                    href="/about">
+                    Who am I?
+                    <i class="las la-arrow-right"></i>
+                </a>
+                <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
+                    About
+                </p>
+            </div>
+            <div class="group">
+                <a class="font-sans text-gray-600 hover:text-gray-400
+                    dark:text-slate-500 dark:hover:text-slate-400 transition"
+                    href="/blog">
+                    What do I think? 
+                    <i class="las la-arrow-right"></i>
+                </a>
+                <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
+                    Blog
+                </p>
+            </div>
+            <div class="group">
+                <a class="font-sans text-gray-600 hover:text-gray-400
+                    dark:text-slate-500 dark:hover:text-slate-400 transition"
+                    href="/blog">
+                    What do I work on? 
+                    <i class="las la-arrow-right"></i>
+                </a>
+                <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
+                    Projects
+                </p>
+            </div>
+            <div class="group">
+                <a class="font-sans text-gray-600 hover:text-gray-400
+                    dark:text-slate-500 dark:hover:text-slate-400 transition"
+                    href="/blog">
+                    What have I done?
+                    <i class="las la-arrow-right"></i>
+                </a>
+                <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
+                    Resume
+                </p>
+            </div>
+            <div class="group">
+                <a class="font-sans text-gray-600 hover:text-gray-400
+                    dark:text-slate-500 dark:hover:text-slate-400 transition"
+                    href="/blog">
+                    What have I written?
+                    <i class="las la-arrow-right"></i>
+                </a>
+                <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
+                    Writings
+                </p>
+            </div>
+        </div>
+        {% block social %}
+            {% if config.extra.social %}            
+                <div class="mt-4 text-8xl xl:text-4xl flex gap-2 justify-center
+                            xl:justify-start">
+                    {% for i in config.extra.social %}
+                        <div class="text-gray-500 hover:text-forest transition">
+                        <a href="{{ i.url }}" target="_blank">
+                            <i class="{{ i.icon }}"></i>
+                        </a>
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endblock social %}
+        {% endblock homepage_content_extend %}
+        </div>
     </div>
 </div>
-{% block social %}
-    {% if config.extra.social %}            
-        <div class="mt-4 text-8xl xl:text-4xl flex gap-2 justify-center
-                    xl:justify-start">
-            {% for i in config.extra.social %}
-                <div class="text-gray-500 hover:text-gray-700 transition">
-                <a href="{{ i.url }}" target="_blank">
-                    <i class="{{ i.icon }}"></i>
-                </a>
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
-{% endblock social %}
-{% endblock homepage_content_extend %}
+{% endblock content %}
