initialize site sections

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <div class="xl:h-screen xl:w-1/2 flex items-center">
         <div class="mx-8 flex flex-col gap-12 xl:gap-0">
             <h1 class="font-serif text-8xl xl:text-4xl text-black dark:text-slate-300">
-                hello, i'm  <span class="bg-forest text-white">nikhil</span> .
+                hello, i'm  <span class="bg-forest text-white px-2">nikhil</span>
             </h1>
             <p class="font-sans text-4xl xl:text-xl text-gray-600 dark:text-slate-500">
                 {{ config.extra.homepage_subtitle }}
@@ -26,8 +26,8 @@
                     dark:text-slate-500 dark:hover:text-slate-400 transition"
                     href="/about">
                     Who am I?
-                    <i class="las la-arrow-right"></i>
                 </a>
+                <i class="las la-arrow-right opacity-0 ease-in-out duration-150 group-hover:opacity-100 pr-2"></i>
                 <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
                     About
                 </p>
@@ -37,8 +37,8 @@
                     dark:text-slate-500 dark:hover:text-slate-400 transition"
                     href="/blog">
                     What do I think? 
-                    <i class="las la-arrow-right"></i>
                 </a>
+                <i class="las la-arrow-right opacity-0 ease-in-out duration-150 group-hover:opacity-100 pr-2"></i>
                 <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
                     Blog
                 </p>
@@ -48,8 +48,8 @@
                     dark:text-slate-500 dark:hover:text-slate-400 transition"
                     href="/blog">
                     What do I work on? 
-                    <i class="las la-arrow-right"></i>
                 </a>
+                <i class="las la-arrow-right opacity-0 ease-in-out duration-150 group-hover:opacity-100 pr-2"></i>
                 <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
                     Projects
                 </p>
@@ -59,8 +59,8 @@
                     dark:text-slate-500 dark:hover:text-slate-400 transition"
                     href="/blog">
                     What have I done?
-                    <i class="las la-arrow-right"></i>
                 </a>
+                <i class="las la-arrow-right opacity-0 ease-in-out duration-150 group-hover:opacity-100 pr-2"></i>
                 <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
                     Resume
                 </p>
@@ -70,8 +70,8 @@
                     dark:text-slate-500 dark:hover:text-slate-400 transition"
                     href="/blog">
                     What have I written?
-                    <i class="las la-arrow-right"></i>
                 </a>
+                <i class="las la-arrow-right opacity-0 ease-in-out duration-150 group-hover:opacity-100 pr-2"></i>
                 <p class="inline text-white bg-forest opacity-0 ease-in-out duration-150 group-hover:opacity-100">
                     Writings
                 </p>
